# Homework

./: .pre-commit-config.yaml  Homework-4_Python-Functions.md  Homework-5_Working-with-data.md  Homework-6_Classes_in_Python.md  README.md  pyproject.toml  requirements.txt  setup.py
MarkKanaplianik/: LICENSE.txt  philosophers_problem.py  setup.py
MarkKanaplianik/final_task/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
MarkKanaplianik/rss_reader/: __main__.py  rss_reader.ini
MarkKanaplianik/session3/: commands.txt
MarkKanaplianik/task5_5/: remember_result.py
MarkKanaplianik/task5_6/: call_once.py
MarkKanaplianik/task5_7/: explanation.txt
MarkKanaplianik/task6_1/: counter.py
MarkKanaplianik/task6_2/: history_dict.py
MarkKanaplianik/task6_3/: cipher.py
MarkKanaplianik/task6_4/: birds.py
MarkKanaplianik/task6_5/: singleton.py
MarkKanaplianik/task6_6/: money.py
MarkKanaplianik/task7_1/: custom_class_context_manager.py  custom_file_context_manager.py
MarkKanaplianik/task7_10/: odd_number_generator.py
MarkKanaplianik/task7_11/: fib_num_gen.py
MarkKanaplianik/task7_2/: custom_generator_context_manager.py  file.txt
MarkKanaplianik/task7_3/: decorator_context_manager.py  decorator_context_manager_another.py  log.txt
MarkKanaplianik/task7_5/: number_check.py
MarkKanaplianik/task7_6/: goldbachs_conjecture.py
MarkKanaplianik/task7_7/: my_number_collection.py
MarkKanaplianik/task7_8/: mysquareiterator.py
rss_reader/: __main__.py
rss_reader/config/: __init__.py  (+2 more)
tests/: test_caching.py  test_parser.py
(+107 files in other folders)
