[tool.poetry]
name = "final_task"
version = "0.1.0"
description = "EPAM Introduction to Python Final Project (RSS reader and parser)"
authors = ["doppelmarker <doppelmarker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | .venv
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
skip_glob = ['**/.venv/**']
